# MVS

./: CMakeLists.txt  vcpkg.json
Apps/: CMakeLists.txt
Apps/CGALDemoApp/: CMakeLists.txt
Apps/DemoApp/: CMakeLists.txt
